# cc-digest

./: .env.example  .gitignore  CHANGELOG.md  FIXES.md  README.es.md  README.ja.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml
src/cc_digest/: __init__.py  cli.py  config.py  extractor.py  llm.py  mcp_server.py
src/cc_digest/backends/: __init__.py  base.py  mongo.py  sqlite.py
src/cc_digest/commands/: digest.py  extract.py  search.py  stats.py
tests/: conftest.py  test_config.py  test_digest_helpers.py  test_extractor.py  test_sqlite.py
